[package]
name = "dlink"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "gateway",
  "broker",
  "network",
  "codec",
  "config",
]

[dependencies]
gateway = { path = "./gateway" }
broker = { path = "./broker" }
network = { path = "./network" }
codec = { path = "./codec" }
config = { path = "./config"}

tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"