[package]
name = "dlink"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "broker",
  "network",
  "config",
  "packet",
  "codec",
]

[dependencies]
broker = { path = "./broker" }
network = { path = "./network" }
codec = { path = "./codec" }
config = { path = "./config"}
packet = {path = "./packet"}


tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"