[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
codec = { path = "../codec" }
config = { path = "../config"}
packet = {path = "../packet"}


tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
